--- a/midterm/about.html
+++ b/midterm/about.html
@@ -36,7 +36,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a href="index.html" class="navbar-brand scroll-top">Portfolio Project</a>
+                        <a href="index.html" class="navbar-brand scroll-top">SEAMUS ALLEN</a>
                     </div>
                     <!--/.navbar-header-->
                     <div id="main-nav" class="collapse navbar-collapse">
