--- a/midterm/coursework.html
+++ b/midterm/coursework.html
@@ -36,7 +36,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a href="index.html" class="navbar-brand scroll-top">Portfolio Project</a>
+                        <a href="index.html" class="navbar-brand scroll-top">SEAMUS ALLEN</a>
                     </div>
                     <!--/.navbar-header-->
                     <div id="main-nav" class="collapse navbar-collapse">
@@ -57,6 +57,7 @@
             <!--/.container-->
         </div>
         <!--/.header-->
+
         <section id="about" class="page-section" style="padding-bottom: 30vh;">
             <div class="container">
                 <div class="section-heading">
