--- a/midterm/formsubmitted.html
+++ b/midterm/formsubmitted.html
@@ -36,7 +36,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a href="index.html" class="navbar-brand scroll-top">Portfolio Project</a>
+                        <a href="index.html" class="navbar-brand scroll-top">SEAMUS ALLEN</a>
                     </div>
                     <!--/.navbar-header-->
                     <div id="main-nav" class="collapse navbar-collapse">
@@ -60,53 +60,9 @@
         
         <section id="about" class="page-section">
             <div class="container">
-                <div class="section-heading">
+                <div class="section-heading" style="height:70vh;">
                     <h1>Submission Recieved! Thank you!</h1>
-                    <p>*submission not actually recieved. This was all a clever ruse! You have been tricked, backstabbed, and quite possibly, bamboozeled! I leave you with this song!</p>
-                    <iframe width="450" height="315" src="https://www.youtube.com/watch?v=qMMnt0XR_as"></iframe>
-                    <!-- <p><em>
-                        People bug me when they interrupt me with calls <br>
-                        And unannounced visits<br>
-                        And on top of that when they chat about nothing at all<br>
-                        And I ask 'what is it?'<br>
-                        I do have a lot to do<br>
-                        Can you return at two?<br>
-                        I will not be here by then<br>
-                        Just leave what you need me for<br>
-                        On a note on my door<br>
-                        So I can ignore it my friend<br>
-                        <br>
-                        You may think it maddening when you ring my answering machine<br>
-                        And I"m right there listening<br>
-                        But I"d like to hire my own secretary who's mean<br>
-                        Someone who says things like<br>
-                        <br>
-                        'Mr. Mayer can"t be reached<br>
-                        He is not in, you see<br>
-                        He"s in a meeting till ten<br>
-                        I suppose I could take your name<br>
-                        Who are you anyway?<br>
-                        Please never call here again<br>
-                        If I see you before you see me in the hall<br>
-                        Then while you"re not looking<br>
-                        I"ll find the nearest bathroom and hide in the stall<br>
-                        Till I think the coast is clear<br>
-                        Then I will take a peak<br>
-                        And, if you"re gone, I"ll sneak<br>
-                        Back to my private abode<br>
-                        There in my world of one<br>
-                        I have a lot more fun<br>
-                        Because people bug me you know<br>
-                        <br>
-                        I do have a lot to do<br>
-                        Can you return at two?<br>
-                        I will not be here by then<br>
-                        Just leave what you need me for<br>
-                        On a note on my door<br>
-                        So I can ignore it my friend (repeat first verse)<br>
-                    </em>
-                    </p> !-->
-
+                    <p>*submission not actually recieved. This was all a clever ruse! You have been tricked, backstabbed, and quite possibly, bamboozeled!</p>
                 </div>
             </div>
         </section>
