--- a/midterm/index.html
+++ b/midterm/index.html
@@ -37,7 +37,7 @@ https://templatemo.com/tm-506-tinker
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="index.html" class="navbar-brand scroll-top">Portfolio Project</a>
+                    <a href="index.html" class="navbar-brand scroll-top">SEAMUS ALLEN</a>
                 </div>
                 <!--/.navbar-header-->
                 <div id="main-nav" class="collapse navbar-collapse">
