--- a/artifact03.html
+++ b/artifact03.html
@@ -1,49 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="description" content="Artifact 3 - Rhombus Example">
-<meta charset="utf-8">
-<title>Artifact 3 - Rhombus</title>
+    <meta name="description" content="Artifact 3 - Rhombus Example">
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/artifact03.css" />
+    <title>Artifact 3 - Rhombus</title>
 </head>
 <body>
-<label>What is the size of Rhombus?</label><br>
-<input type="text" id="rHeight" value="5" size="5">
-<br>
-<label>Choose color for Even position</label><br>
-<select id="colorEven">
-<option value="#0000FF">Blue</option>
-<option value="#FF0000">Red</option>
-<option value="#FF9900">Orange</option>
-</select><br>
+    <label>What is the size of Rhombus?</label><br>
+    <input type="text" id="rHeight" value="5" size="5">
+    <br>
+    <label>Choose color for Even position</label><br>
+    <select id="colorEven">
+        <option value="#832232">Antique Ruby</option>
+        <option value="#0B0033">Russian Violet</option>
+        <option value="#370031">Dark Purple</option>
+    </select><br>
 
-<label>Choose color for Odd position</label><br>
-<select id="colorOdd">
-<option value="#FF0099">Pink</option>
-<option value="#33FF00">Green</option>
-<option value="#660099">Purple</option>
-</select>
-<br>
-<label>Choose symbol for Rhombus</label>
-<select id="symbol">
-<option value="*">*</option>
-<option value="$">$</option>
-<option value="@">@</option>
-</select>
-<br>
-<button onclick="createRhombus(document.getElementById('rHeight').value,
-document.getElementById('colorEven').value,
-document.getElementById('colorOdd').value,
-document.getElementById('symbol').value);">Display Rhombus</button>
-<div id="upLeft">Rhombus</div>
-<div id="upRight"></div>
+    <label>Choose color for Odd position</label><br>
+    <select id="colorOdd">
+        <option value="#37718E">Celadon Blue</option>
+        <option value="#7180B9">Glaucous</option>
+        <option value="#B4B8AB">Ash Grey</option>
+        
+    </select>
+    <br>
+    <label>Choose symbol for Rhombus</label>
+    <select id="symbol">
+        <option value="■">■</option>
+        <option value="*">*</option>
+        <option value="%">%</option>
+        <option value="@">@</option>
 
-<div class="clear"></div>
+    </select>
+    <br>
+    <button onclick="createRhombus(document.getElementById('rHeight').value,
+    document.getElementById('colorEven').value,
+    document.getElementById('colorOdd').value,
+    document.getElementById('symbol').value);">Display Rhombus</button><br>
+    
+    <div id="upLeft"></div><div id="upRight"></div>
 
+    <div class="clear"></div>
 
-<div id="downLeft"></div>
-<div id="downRight"></div>
+    <div id="downLeft"></div><div id="downRight"></div>
 
-<script src="js/artifact03.js"></script>
+    <script src="js/artifact03.js"></script>
 
 
 </body>
