--- a/artifact05.html
+++ b/artifact05.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="child">
+        <div class="child" id="allbox">
 
             <h1>Slideshow</h1>
             <img id="slideshow" src="data/images/slideshow00.jpg" width="600" height="600" alt="Mountain 01 — Evening">
@@ -23,7 +23,7 @@
             </div> 
         </div>
     </div>
-
+    
 <script src="js/artifact05.js"></script>
  
 </body>
