--- a/artifact05.html
+++ b/artifact05.html
@@ -25,6 +25,16 @@
     </div>
     
 <script src="js/artifact05.js"></script>
+
+
  
 </body>
+
+<footer>
+    <div class="container" id="footer">
+        <p><a href="http://validator.w3.org/check?uri=referer" referrerpolicy="strict-origin" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a></p>
+        <p><a href="http://jigsaw.w3.org/css-validator/check/referer" referrerpolicy="strict-origin" target="_blank"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"/></a></p>
+    </div>
+</footer>
+
 </html>
