--- a/artifact05.html
+++ b/artifact05.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 <head>
 <meta name="description" content="Week #9 - Slideshow - YU2">
  <meta charset="utf-8">
@@ -26,15 +26,12 @@
     
 <script src="js/artifact05.js"></script>
 
+<div class="container" id="footer">
+    <p><a href="http://validator.w3.org/check?uri=referer" referrerpolicy="strict-origin" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a></p>
+    <p><a href="http://jigsaw.w3.org/css-validator/check/referer" referrerpolicy="strict-origin" target="_blank"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"/></a></p>
+</div>
 
- 
 </body>
 
-<footer>
-    <div class="container" id="footer">
-        <p><a href="http://validator.w3.org/check?uri=referer" referrerpolicy="strict-origin" target="_blank"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0" height="31" width="88" /></a></p>
-        <p><a href="http://jigsaw.w3.org/css-validator/check/referer" referrerpolicy="strict-origin" target="_blank"><img src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!"/></a></p>
-    </div>
-</footer>
 
 </html>
